--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site wide configuration
 
-title: "UCL Department of Political Science"
-description: "This is a description of my awesome site."
+title: "University College London"
+description: "Department of Political Science"
 logo: # 120x120 px default image used for Twitter summary card
 teaser: # 400x250 px default teaser image used in image archive grid
 locale: en
