--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # Site navigation links
 
-- title:
-  url:
+- title: Calendar
+  url: https://github.com/mmistakes/skinny-bones-jekyll
   excerpt:
   image:
