--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,5 +5,5 @@
   excerpt:
   image:
   
-- title: Other Events
+- title: Events around UCL
   url: https://github.com/mmistakes/skinny-bones-jekyll
