--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,3 +7,6 @@
   
 - title: Events around UCL
   url: https://github.com/mmistakes/skinny-bones-jekyll
+  
+- title: Contact Us
+  url: https://github.com/mmistakes/skinny-bones-jekyll
