--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@
   image:
   
 - title: Events around UCL
-  url: https://github.com/mmistakes/skinny-bones-jekyll
+  url: /others/
   
 - title: Contact Us
   url: https://github.com/mmistakes/skinny-bones-jekyll
