--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: "University College London Political Science"
 description: "Department of Political Science"
-logo: # 120x120 px default image used for Twitter summary card
+logo: bio-photo.jpg # 120x120 px default image used for Twitter summary card
 teaser: # 400x250 px default teaser image used in image archive grid
 locale: en
 url:
