--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site wide configuration
 
-title: "University College London Political Science"
+title: "University College London </br> Department of Political Science"
 description: "Department of Political Science"
-logo: bio-photo.jpg # 120x120 px default image used for Twitter summary card
-teaser: # 400x250 px default teaser image used in image archive grid
+logo: # 120x120 px default image used for Twitter summary card
+teaser: bio-photo.jpg # 400x250 px default teaser image used in image archive grid
 locale: en
 url:
 feed:
