--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title: "University College London </br> Department of Political Science"
+title: "University College London School of Public Policy"
 description: "Department of Political Science"
 logo: # 120x120 px default image used for Twitter summary card
 teaser: bio-photo.jpg # 400x250 px default teaser image used in image archive grid
